implemented view part via thymeleaf; added tests for service and controller;